--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <div class="container responsive-logo px-0">
         <a class="navbar-brand me-auto" href="index.html">
           <img
-            src="images/logo_header_en.png"
+            src="images/university-logo.png"
             alt="Main-logo"
             class="img-fluid"
           />
@@ -219,7 +219,7 @@
   <div class="container">
     <div class="row">
       <div class="col-12 mt-5 mb-5 py-5">
-        <h1>CONTACT</h1>
+        <h1>Home Page</h1>
 
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat autem doloribus exercitationem quasi odio quam placeat deserunt excepturi cumque tempora? Est magnam doloribus a hic temporibus consequatur aperiam impedit consequuntur repellat necessitatibus maiores nisi officia voluptatum, qui adipisci facilis ducimus iure natus magni sequi deserunt! Laboriosam consequuntur omnis sit in?
 
@@ -259,15 +259,19 @@
         <div class="container-fluid pt-2 footer-bg-color">
           <div class="container mt-5">
             <div class="row text-white">
-              <div
-                class="col-md-3 col-12 mb-2 mb-md-0 footer-border-right footer-logo"
-              >
-                <a href="index.html"
-                  ><img
-                    class="mb-3 d-flex justify-content-center align-items-center"
-                    src="images/logo_footer_en.png"
-                    alt="footer logo"
-                /></a>
+              <div class="col-md-4 col-12 mb-2 mb-md-0 footer-border-right footer-logo">
+                <h5 class="footer-heading-font-size">About University</h5>
+                <div class="logo mt-4">
+                  <a href="index.html" class="navbar-brand"
+                    ><img
+                      class="mb-3 d-flex justify-content-center align-items-center"
+                      src="images/university-logo.png"
+                      alt="footer logo"
+                  /></a>
+                </div>
+                <div class="article">
+                  <p>University of Engineering & Technology (BAUET) the pioneer Technical Institutes of Armed Forces, started its journey from 2015. It was the visionary leadership of the Honorable Prime Minister of People’s Republic of Bangladesh Sheikh Hasina to establish a Technical Institute of Armed Forces.</p>
+                </div>
               </div>
     
               <div class="col-md-3 col-12 mt-md-0 mt-4 footer-border-right">
@@ -278,7 +282,7 @@
                   </div>
                   <div class="contact-address">
                     <p>
-                      International Association of Lawyers, Shahbag, Dhaka-1000.
+                      University, Shahbag, Dhaka-1000.
                     </p>
                   </div>
                 </div>
@@ -289,7 +293,17 @@
                   </div>
                   <div class="contact-address">
                     <a href="#" class="text-decoration-none">
-                      <p>+8802226 602299, +880 18 9748 5737</p>
+                      +8802226 602299
+                    </a>
+                  </div>
+                </div>
+                <div class="contact-info">
+                  <div class="contact-icon">
+                    <a href="#"><i class="bi bi-telephone"></i></a>
+                  </div>
+                  <div class="contact-address">
+                    <a href="#" class="text-decoration-none">
+                       +880 18 9748 5737
                     </a>
                   </div>
                 </div>
@@ -307,7 +321,7 @@
               </div>
     
               <div
-                class="col-md-3 col-12 quick-link mt-md-0 mt-4 footer-border-right"
+                class="col-md-2 col-12 quick-link mt-md-0 mt-4 footer-border-right"
               >
                 <h5 class="footer-heading-font-size">Quick Links</h5>
                 <ul class="ps-0 mt-4">
