--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 
           <div class="logo-search d-flex justify-content-between">
             <div class="logo">
-              <a href="#"><img src="images/university-logo.png" alt="Main-logo" height="100" width="100"
+              <a href="#"><img src="images/university-logo.png" alt="Main-logo" height="auto" width="100"
                   class="img-fluid"></a>
             </div>
-            <div class="Search-button">
+            <div class="Search-button d-flex justify-content-end align-items-center">
               <form class="d-flex" role="search">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success" type="submit">Search</button>
@@ -225,6 +225,67 @@
   </nav>
 
   <!-- *********Navbar Start ******* -->
+  <div class="container-fluid">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae aut corporis provident asperiores. Molestias voluptas sequi eius dicta eligendi aperiam autem vel magni. Incidunt eligendi adipisci accusantium modi molestiae quae quas deserunt sit cumque ad at inventore quo, fugit culpa in deleniti corporis, explicabo voluptatem cum iste sed non rerum similique. Eos perferendis praesentium repudiandae provident animi dolor nemo quo, laudantium, accusamus eaque hic eveniet exercitationem facere quia quam, ex autem labore dicta quae facilis officia et numquam quasi? Magni neque, est aliquam dolore adipisci atque iste tempora sunt incidunt quas dicta, eum amet? Qui ipsum fugiat atque. Numquam aspernatur voluptatibus repellat incidunt labore id quaerat eum recusandae, facere animi ipsum nulla alias quis neque necessitatibus dolorum accusantium veniam sit nisi. A corporis, sit quae cum consequatur sapiente! Blanditiis, illum ratione. Iusto cumque vero aspernatur quas nemo illo quaerat id animi fuga minima, a repellendus harum ea tenetur, officiis nisi perspiciatis, pariatur obcaecati dicta sint suscipit cum eligendi sed corrupti. Amet eaque nesciunt quas magnam distinctio blanditiis illo qui sapiente provident officiis quidem id, possimus dolor adipisci quisquam! Esse quaerat provident consequatur laborum. Sed, dolorum optio? Tempore quidem nulla optio, recusandae est, quos iste culpa pariatur aut nesciunt, explicabo dolorem?</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- **************Footer Start*********  -->
+
+  <div class="container-fluid bg-secondary">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-3 col-12">
+          <h5>About University</h5>
+          <div class="footer-logo">
+            <img src="images/university-logo.png" width="130" height="auto" alt="Footer-logo">
+          </div>
+          <div class="logo-article">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae molestias recusandae veritatis
+              veniam, eaque quaerat deleniti cumque corrupti consequuntur velit.</p>
+          </div>
+        </div>
+        <div class="col-md-3 col-12">
+          <h5>Featured Links</h5>
+          <ul>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">All Notice</a></li>
+            <li><a href="#">All News & Events</a></li>
+            <li><a href="#">Admission</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </div>
+        <div class="col-md-3 col-12">
+          <h5>Links</h5>
+          <ul>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">All Notice</a></li>
+            <li><a href="#">All News & Events</a></li>
+            <li><a href="#">Admission</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </div>
+        <div class="col-md-3 col-12">
+          <h5>Contact Us</h5>
+          <ul>
+            <li><a href="#">Nabinagar, Brahmanbaria</a></li>
+            <li><a href="#">Alamnagar, Nabinagar, Brahmanbaria </a></li>
+            <li><a href="#">+880 1708503510</a></li>
+            <li><a href="#">+880 1708503503</a></li>
+            <li><a href="#">+880 1708503514</a></li>
+            <li><a href="#">registrar@bauet.ac.bd</a></li>
+            <li><a href="#">registrarbauet@gmail.com</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- **************Footer End*********  -->
 
   <!-- Boostrap JS link-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
