--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
   </nav>
 
   <!-- *********Navbar Start ******* -->
-  <div class="container-fluid">
+  <div class="container-fluid my-5">
     <div class="container">
       <div class="row">
         <div class="col-12">
@@ -236,12 +236,12 @@
   </div>
   <!-- **************Footer Start*********  -->
 
-  <div class="container-fluid bg-secondary">
+  <div class="container-fluid bg-secondary py-5">
     <div class="container">
       <div class="row">
         <div class="col-md-3 col-12">
           <h5>About University</h5>
-          <div class="footer-logo">
+          <div class="footer-logo my-3">
             <img src="images/university-logo.png" width="130" height="auto" alt="Footer-logo">
           </div>
           <div class="logo-article">
@@ -249,7 +249,7 @@
               veniam, eaque quaerat deleniti cumque corrupti consequuntur velit.</p>
           </div>
         </div>
-        <div class="col-md-3 col-12">
+        <div class="col-md-3 col-12 footer-menu">
           <h5>Featured Links</h5>
           <ul>
             <li><a href="#">About Us</a></li>
@@ -259,7 +259,7 @@
             <li><a href="#">Contact</a></li>
           </ul>
         </div>
-        <div class="col-md-3 col-12">
+        <div class="col-md-3 col-12 footer-menu">
           <h5>Links</h5>
           <ul>
             <li><a href="#">About Us</a></li>
@@ -269,7 +269,7 @@
             <li><a href="#">Contact</a></li>
           </ul>
         </div>
-        <div class="col-md-3 col-12">
+        <div class="col-md-3 col-12 footer-menu">
           <h5>Contact Us</h5>
           <ul>
             <li><a href="#">Nabinagar, Brahmanbaria</a></li>
