--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integriwhite
     !important;a384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
+    <!-- font-awesome Icon link  -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
   <!-- External CSS Link  -->
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/responsive-css.css">
@@ -22,6 +25,35 @@
 
   <!-- *********Navbar Start ******* -->
 
+  <!-- navbar section-one start  -->
+  <div class="container-fluid bg-danger">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 nav-top-font ">
+          <i class="fa-regular fa-envelope me-1 text-white"></i>
+          <span class="me-2 text-white">info@bauet.ac.bd</span>
+          <i class="fa-solid fa-phone me-1 text-white"></i>
+          <span class="text-white">+8801708503503 (Registrar), +8801708503510 (Deputy Registrar, Acad)	</span>
+
+        </div>
+        <div class="col-md-6 header-top-2">
+          <ul class="d-flex justify-content-center align-items-center">
+            <li class=" nav-item border-start "><a href="#">Upcoming Events</a></li>
+            <li class=" nav-item border-start "><a href="#"> News Events</a></li>
+            <li class=" nav-item border-start "><a href="#">Notice</a></li>
+            <li class=" nav-item border-start "><a href="#">IEEE Student Branch </a></li>
+            <li class=" nav-item border-start "><a href="#"> Alumni </a></li>
+            <li class=" nav-item border-start "><a href="#">Webmail</a></li>
+          </ul>
+         
+
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- navbar section-one end -->
+
+  <!-- navbar section-two start  -->
   <div class="container-fluid">
     <div class="container">
       <div class="row">
@@ -43,6 +75,11 @@
       </div>
     </div>
   </div>
+  <!-- navbar section-two end -->
+
+
+  
+  <!-- navbar section-three start  -->
 
   <nav class="navbar navbar-expand-lg bg-primary pt-0 pb-0 ">
     <div class="container-fluid">
@@ -224,12 +261,27 @@
     </div>
   </nav>
 
-  <!-- *********Navbar Start ******* -->
+  <!-- navbar section-three end  -->
+
+  <!-- *********Navbar End ******* -->
   <div class="container-fluid my-5">
     <div class="container">
       <div class="row">
         <div class="col-12">
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae aut corporis provident asperiores. Molestias voluptas sequi eius dicta eligendi aperiam autem vel magni. Incidunt eligendi adipisci accusantium modi molestiae quae quas deserunt sit cumque ad at inventore quo, fugit culpa in deleniti corporis, explicabo voluptatem cum iste sed non rerum similique. Eos perferendis praesentium repudiandae provident animi dolor nemo quo, laudantium, accusamus eaque hic eveniet exercitationem facere quia quam, ex autem labore dicta quae facilis officia et numquam quasi? Magni neque, est aliquam dolore adipisci atque iste tempora sunt incidunt quas dicta, eum amet? Qui ipsum fugiat atque. Numquam aspernatur voluptatibus repellat incidunt labore id quaerat eum recusandae, facere animi ipsum nulla alias quis neque necessitatibus dolorum accusantium veniam sit nisi. A corporis, sit quae cum consequatur sapiente! Blanditiis, illum ratione. Iusto cumque vero aspernatur quas nemo illo quaerat id animi fuga minima, a repellendus harum ea tenetur, officiis nisi perspiciatis, pariatur obcaecati dicta sint suscipit cum eligendi sed corrupti. Amet eaque nesciunt quas magnam distinctio blanditiis illo qui sapiente provident officiis quidem id, possimus dolor adipisci quisquam! Esse quaerat provident consequatur laborum. Sed, dolorum optio? Tempore quidem nulla optio, recusandae est, quos iste culpa pariatur aut nesciunt, explicabo dolorem?</p>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae aut corporis provident asperiores.
+            Molestias voluptas sequi eius dicta eligendi aperiam autem vel magni. Incidunt eligendi adipisci accusantium
+            modi molestiae quae quas deserunt sit cumque ad at inventore quo, fugit culpa in deleniti corporis,
+            explicabo voluptatem cum iste sed non rerum similique. Eos perferendis praesentium repudiandae provident
+            animi dolor nemo quo, laudantium, accusamus eaque hic eveniet exercitationem facere quia quam, ex autem
+            labore dicta quae facilis officia et numquam quasi? Magni neque, est aliquam dolore adipisci atque iste
+            tempora sunt incidunt quas dicta, eum amet? Qui ipsum fugiat atque. Numquam aspernatur voluptatibus repellat
+            incidunt labore id quaerat eum recusandae, facere animi ipsum nulla alias quis neque necessitatibus dolorum
+            accusantium veniam sit nisi. A corporis, sit quae cum consequatur sapiente! Blanditiis, illum ratione. Iusto
+            cumque vero aspernatur quas nemo illo quaerat id animi fuga minima, a repellendus harum ea tenetur, officiis
+            nisi perspiciatis, pariatur obcaecati dicta sint suscipit cum eligendi sed corrupti. Amet eaque nesciunt
+            quas magnam distinctio blanditiis illo qui sapiente provident officiis quidem id, possimus dolor adipisci
+            quisquam! Esse quaerat provident consequatur laborum. Sed, dolorum optio? Tempore quidem nulla optio,
+            recusandae est, quos iste culpa pariatur aut nesciunt, explicabo dolorem?</p>
         </div>
       </div>
     </div>
@@ -239,19 +291,31 @@
   <div class="container-fluid bg-secondary py-5">
     <div class="container">
       <div class="row">
-        <div class="col-md-3 col-12">
-          <h5>About University</h5>
+        <div class="col-md-4 col-12 d-flex flex-column align-items-center me-2">
+          <h5 class="heading-text-color">About University</h5>
           <div class="footer-logo my-3">
             <img src="images/university-logo.png" width="130" height="auto" alt="Footer-logo">
           </div>
-          <div class="logo-article">
+          <div class="logo-article d-flex flex-column justify-content-center align-items-center text-center">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae molestias recusandae veritatis
               veniam, eaque quaerat deleniti cumque corrupti consequuntur velit.</p>
           </div>
         </div>
-        <div class="col-md-3 col-12 footer-menu">
-          <h5>Featured Links</h5>
-          <ul>
+        <div class="col-md-2 col-12 footer-menu">
+          <h5 class="heading-text-color mb-3">Featured Links</h5>
+
+          
+          <ul class="ps-0">
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">All Notice</a></li>
+            <li><a href="#">All News & Events</a></li>
+            <li><a href="#">Admission</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </div>
+        <div class="col-md-2 col-12 footer-menu">
+          <h5 class="heading-text-color mb-3">Links</h5>
+          <ul class="ps-0">
             <li><a href="#">About Us</a></li>
             <li><a href="#">All Notice</a></li>
             <li><a href="#">All News & Events</a></li>
@@ -260,18 +324,8 @@
           </ul>
         </div>
         <div class="col-md-3 col-12 footer-menu">
-          <h5>Links</h5>
-          <ul>
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">All Notice</a></li>
-            <li><a href="#">All News & Events</a></li>
-            <li><a href="#">Admission</a></li>
-            <li><a href="#">Contact</a></li>
-          </ul>
-        </div>
-        <div class="col-md-3 col-12 footer-menu">
-          <h5>Contact Us</h5>
-          <ul>
+          <h5 class="heading-text-color mb-3">Contact Us</h5>
+          <ul class="ps-0">
             <li><a href="#">Nabinagar, Brahmanbaria</a></li>
             <li><a href="#">Alamnagar, Nabinagar, Brahmanbaria </a></li>
             <li><a href="#">+880 1708503510</a></li>
