--- a/admission-form.html
+++ b/admission-form.html
@@ -225,35 +225,15 @@
   </nav>
 
   <!-- *********Navbar End ******* -->
-  <div class="container-fluid my-5">
-    <div class="container">
-      <div class="row">
-        <div class="col-12">
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae aut corporis provident asperiores.
-            Molestias voluptas sequi eius dicta eligendi aperiam autem vel magni. Incidunt eligendi adipisci accusantium
-            modi molestiae quae quas deserunt sit cumque ad at inventore quo, fugit culpa in deleniti corporis,
-            explicabo voluptatem cum iste sed non rerum similique. Eos perferendis praesentium repudiandae provident
-            animi dolor nemo quo, laudantium, accusamus eaque hic eveniet exercitationem facere quia quam, ex autem
-            labore dicta quae facilis officia et numquam quasi? Magni neque, est aliquam dolore adipisci atque iste
-            tempora sunt incidunt quas dicta, eum amet? Qui ipsum fugiat atque. Numquam aspernatur voluptatibus repellat
-            incidunt labore id quaerat eum recusandae, facere animi ipsum nulla alias quis neque necessitatibus dolorum
-            accusantium veniam sit nisi. A corporis, sit quae cum consequatur sapiente! Blanditiis, illum ratione. Iusto
-            cumque vero aspernatur quas nemo illo quaerat id animi fuga minima, a repellendus harum ea tenetur, officiis
-            nisi perspiciatis, pariatur obcaecati dicta sint suscipit cum eligendi sed corrupti. Amet eaque nesciunt
-            quas magnam distinctio blanditiis illo qui sapiente provident officiis quidem id, possimus dolor adipisci
-            quisquam! Esse quaerat provident consequatur laborum. Sed, dolorum optio? Tempore quidem nulla optio,
-            recusandae est, quos iste culpa pariatur aut nesciunt, explicabo dolorem?</p>
-        </div>
-      </div>
-    </div>
-  </div>
-
+  
 
   <!-- Form start  -->
   <div class="container-fluid my-5">
 
     <div class="container">
-      <div class="row">
+      <div class="row d-flex justify-content-center">
+        <h3 class="d-flex justify-content-center my-4 text-primary"><b>Application Form</b></h3>
+        <hr>
         <div class="col-10">
 
        
@@ -262,15 +242,15 @@
 
               <!-- *****Section-one start **** -->
 
-            <div class="row">
+            <div class="row form-section-bg p-4 shadow-sm rounded my-2">
               <!-- item-1 start  -->
-              <div class="col-md-6 col-12">
-                <div class="row">
+              <div class="col-md-6 col-12 ">
+                <div class="row ">
 
-                  <div class="col-md-4 col-12 d-flex align-items-center font-size">
+                  <div class="col-md-6 col-12 d-flex align-items-center font-size">
                     <label for="fname">Student's Full Name : *</label>
                   </div>
-                  <div class="col-md-5 col-12 box-size">
+                  <div class="col-md-6 col-12 box-size">
                     <input type="text" id="fname" name="firstname" placeholder="Full Name of Student">
                   </div>
                 </div>
@@ -279,10 +259,10 @@
               <!-- item-2 start  -->
               <div class="col-md-6 col-12">
                 <div class="row">
-                  <div class="col-md-4 col-12 d-flex align-items-center font-size">
+                  <div class="col-md-6 col-12 d-flex align-items-center font-size">
                     <label for="lname">Mobile No : *</label>
                   </div>
-                  <div class="col-md-5 col-12 box-size">
+                  <div class="col-md-6 col-12 box-size">
                     <input type="text" id="lname" name="lastname" placeholder="SMS Notification Number">
                   </div>
                 </div>
@@ -292,10 +272,10 @@
 
               <div class="col-md-6 col-12 mt-4">
                 <div class="row">
-                  <div class="col-md-4 col-12 d-flex align-items-center font-size">
+                  <div class="col-md-6 col-12 d-flex align-items-center font-size">
                     <label for="lname">Date of Birth: *</label>
                   </div>
-                  <div class="col-md-5 col-12 box-size">
+                  <div class="col-md-6 col-12 box-size">
                     <input type="text" id="lname" name="lastname" placeholder="Date of Birth">
                   </div>
                 </div>
@@ -305,10 +285,10 @@
 
               <div class="col-md-6 col-12 mt-4">
                 <div class="row">
-                  <div class="col-md-4 col-12 d-flex align-items-center font-size">
+                  <div class="col-md-6 col-12 d-flex align-items-center font-size">
                     <label for="lname">Age: *</label>
                   </div>
-                  <div class="col-md-5 col-12 box-size">
+                  <div class="col-md-6 col-12 box-size">
                     <input type="text" id="lname" name="lastname" placeholder="Age">
                   </div>
                 </div>
@@ -318,10 +298,10 @@
 
               <div class="col-md-6 col-12 mt-4">
                 <div class="row">
-                  <div class="col-md-4 col-12 d-flex align-items-center font-size">
+                  <div class="col-md-6 col-12 d-flex align-items-center font-size">
                     <label for="lname">Nationality : *</label>
                   </div>
-                  <div class="col-md-5 col-12 box-size">
+                  <div class="col-md-6 col-12 box-size">
                     <input type="text" id="lname" name="lastname" placeholder="Nationality">
                   </div>
                 </div>
@@ -332,10 +312,10 @@
 
               <div class="col-md-6 col-12 mt-4">
                 <div class="row">
-                  <div class="col-md-4 col-12 d-flex align-items-center font-size">
+                  <div class="col-md-6 col-12 d-flex align-items-center font-size">
                     <label for="lname">Religion: *</label>
                   </div>
-                  <div class="col-md-5 col-12 box-size">
+                  <div class="col-md-6 col-12 box-size">
                     <select id="religion" name="religion">
                       <option value="">-- select one --</option>
                       <option value="Islam">Islam</option>
@@ -355,15 +335,15 @@
 
               <!-- *****Section-two start **** -->
 
-            <div class="row">
+            <div class="row form-section-bg p-4 shadow-sm rounded my-2">
               <!-- item-7 start  -->
 
               <div class="col-md-6 col-12 mt-4">
                 <div class="row">
-                  <div class="col-md-4 col-12 d-flex align-items-center font-size">
+                  <div class="col-md-6 col-12 d-flex align-items-center font-size">
                     <label for="lname">Father's Name: *</label>
                   </div>
-                  <div class="col-md-5 col-12 box-size">
+                  <div class="col-md-6 col-12 box-size">
                     <input type="text" id="lname" name="lastname" placeholder="Father's Name">
                   </div>
                 </div>
@@ -374,10 +354,10 @@
 
               <div class="col-md-6 col-12 mt-4">
                 <div class="row">
-                  <div class="col-md-4 col-12 d-flex align-items-center font-size">
+                  <div class="col-md-6 col-12 d-flex align-items-center font-size">
                     <label for="lname">Occupation: *</label>
                   </div>
-                  <div class="col-md-5 col-12 box-size">
+                  <div class="col-md-6 col-12 box-size">
                     <input type="text" id="lname" name="lastname" placeholder=" Father's Occupation">
                   </div>
                 </div>
@@ -390,10 +370,10 @@
 
                <div class="col-md-6 col-12 mt-4">
                 <div class="row">
-                  <div class="col-md-4 col-12 d-flex align-items-center font-size">
+                  <div class="col-md-6 col-12 d-flex align-items-center font-size">
                     <label for="lname">Monthly Income :</label>
                   </div>
-                  <div class="col-md-5 col-12 box-size">
+                  <div class="col-md-6 col-12 box-size">
                     <input type="text" id="lname" name="lastname" placeholder="Father's Monthly Income">
                   </div>
                 </div>
@@ -403,10 +383,10 @@
               <!-- item-10 start  -->
               <div class="col-md-6 col-12 mt-4">
                 <div class="row">
-                  <div class="col-md-4 col-12 d-flex align-items-center font-size">
+                  <div class="col-md-6 col-12 d-flex align-items-center font-size">
                     <label for="lname">Mobile No : *</label>
                   </div>
-                  <div class="col-md-5 col-12 box-size">
+                  <div class="col-md-6 col-12 box-size">
                     <input type="text" id="lname" name="lastname" placeholder="Father's Number">
                   </div>
                 </div>
@@ -417,10 +397,10 @@
 
               <div class="col-md-6 col-12 mt-4">
                 <div class="row">
-                  <div class="col-md-4 col-12 d-flex align-items-center font-size">
+                  <div class="col-md-6 col-12 d-flex align-items-center font-size">
                     <label for="lname">Father's NID: *</label>
                   </div>
-                  <div class="col-md-5 col-12 box-size">
+                  <div class="col-md-6 col-12 box-size">
                     <input type="text" id="lname" name="lastname" placeholder="Father's NID Number">
                   </div>
                 </div>
@@ -432,15 +412,15 @@
 
               <!-- *****Section-three start **** -->
 
-            <div class="row">
+            <div class="row form-section-bg p-4 shadow-sm rounded my-2">
               <!-- item-7 start  -->
 
               <div class="col-md-6 col-12 mt-4">
                 <div class="row">
-                  <div class="col-md-4 col-12 d-flex align-items-center font-size">
+                  <div class="col-md-6 col-12 d-flex align-items-center font-size">
                     <label for="lname">Mother's Name: *</label>
                   </div>
-                  <div class="col-md-5 col-12 box-size">
+                  <div class="col-md-6 col-12 box-size">
                     <input type="text" id="lname" name="lastname" placeholder="Mother's Name">
                   </div>
                 </div>
@@ -451,10 +431,10 @@
 
               <div class="col-md-6 col-12 mt-4">
                 <div class="row">
-                  <div class="col-md-4 col-12 d-flex align-items-center font-size">
+                  <div class="col-md-6 col-12 d-flex align-items-center font-size">
                     <label for="lname">Occupation: *</label>
                   </div>
-                  <div class="col-md-5 col-12 box-size">
+                  <div class="col-md-6 col-12 box-size">
                     <input type="text" id="lname" name="lastname" placeholder=" Mother's Occupation">
                   </div>
                 </div>
@@ -467,10 +447,10 @@
 
                <div class="col-md-6 col-12 mt-4">
                 <div class="row">
-                  <div class="col-md-4 col-12 d-flex align-items-center font-size">
+                  <div class="col-md-6 col-12 d-flex align-items-center font-size">
                     <label for="lname">Monthly Income :</label>
                   </div>
-                  <div class="col-md-5 col-12 box-size">
+                  <div class="col-md-6 col-12 box-size">
                     <input type="text" id="lname" name="lastname" placeholder="Mother's Monthly Income">
                   </div>
                 </div>
@@ -480,10 +460,10 @@
               <!-- item-10 start  -->
               <div class="col-md-6 col-12 mt-4">
                 <div class="row">
-                  <div class="col-md-4 col-12 d-flex align-items-center font-size">
+                  <div class="col-md-6 col-12 d-flex align-items-center font-size">
                     <label for="lname">Mobile No : </label>
                   </div>
-                  <div class="col-md-5 col-12 box-size">
+                  <div class="col-md-6 col-12 box-size">
                     <input type="text" id="lname" name="lastname" placeholder="Mother's Number">
                   </div>
                 </div>
@@ -494,10 +474,10 @@
 
               <div class="col-md-6 col-12 mt-4">
                 <div class="row">
-                  <div class="col-md-4 col-12 d-flex align-items-center font-size">
+                  <div class="col-md-6 col-12 d-flex align-items-center font-size">
                     <label for="lname">Father's NID: *</label>
                   </div>
-                  <div class="col-md-5 col-12 box-size">
+                  <div class="col-md-6 col-12 box-size">
                     <input type="text" id="lname" name="lastname" placeholder="Mother's NID Number">
                   </div>
                 </div>
@@ -509,15 +489,15 @@
 
               <!-- *****Section-four start **** -->
 
-            <div class="row">
+            <div class="row form-section-bg p-4 shadow-sm rounded my-2">
               <!-- item-7 start  -->
 
               <div class="col-md-6 col-12 mt-4">
                 <div class="row">
-                  <div class="col-md-4 col-12 d-flex align-items-center font-size">
+                  <div class="col-md-6 col-12 d-flex align-items-center font-size">
                     <label for="lname">Local Guardian's Name: </label>
                   </div>
-                  <div class="col-md-5 col-12 box-size">
+                  <div class="col-md-6 col-12 box-size">
                     <input type="text" id="lname" name="lastname" placeholder="Local Guardian's Name">
                   </div>
                 </div>
@@ -528,10 +508,10 @@
 
               <div class="col-md-6 col-12 mt-4">
                 <div class="row">
-                  <div class="col-md-4 col-12 d-flex align-items-center font-size">
+                  <div class="col-md-6 col-12 d-flex align-items-center font-size">
                     <label for="lname">Occupation: </label>
                   </div>
-                  <div class="col-md-5 col-12 box-size">
+                  <div class="col-md-6 col-12 box-size">
                     <input type="text" id="lname" name="lastname" placeholder=" Local Guardian's Occupation">
                   </div>
                 </div>
@@ -542,16 +522,93 @@
               <!-- item-10 start  -->
               <div class="col-md-6 col-12 mt-4">
                 <div class="row">
-                  <div class="col-md-4 col-12 d-flex align-items-center font-size">
+                  <div class="col-md-6 col-12 d-flex align-items-center font-size">
                     <label for="lname">Mobile No : </label>
                   </div>
-                  <div class="col-md-5 col-12 box-size">
+                  <div class="col-md-6 col-12 box-size">
                     <input type="text" id="lname" name="lastname" placeholder="Mother's Number">
                   </div>
                 </div>
               </div>
               <!-- item-10 end  -->
 
+
+            </div>
+              <!-- *****Section-four end **** -->
+
+              <!-- *****Section-four start **** -->
+
+            <div class="row form-section-bg p-4 shadow-sm rounded my-2">
+              <!-- item-7 start  -->
+
+              <div class="col-md-6 col-12 mt-4">
+                <div class="row">
+                  <div class="col-md-6 col-12 d-flex align-items-center font-size">
+                    <label for="lname">Mother's Name: *</label>
+                  </div>
+                  <div class="col-md-6 col-12 box-size">
+                    <input type="text" id="lname" name="lastname" placeholder="Mother's Name">
+                  </div>
+                </div>
+              </div>
+              <!-- item-7 end  -->
+
+              <!-- item-8 start  -->
+
+              <div class="col-md-6 col-12 mt-4">
+                <div class="row">
+                  <div class="col-md-6 col-12 d-flex align-items-center font-size">
+                    <label for="lname">Occupation: *</label>
+                  </div>
+                  <div class="col-md-6 col-12 box-size">
+                    <input type="text" id="lname" name="lastname" placeholder=" Mother's Occupation">
+                  </div>
+                </div>
+              </div>
+              <!-- item-8 end  -->
+
+              
+
+               <!-- item-9 start  -->
+
+               <div class="col-md-6 col-12 mt-4">
+                <div class="row">
+                  <div class="col-md-6 col-12 d-flex align-items-center font-size">
+                    <label for="lname">Monthly Income :</label>
+                  </div>
+                  <div class="col-md-6 col-12 box-size">
+                    <input type="text" id="lname" name="lastname" placeholder="Mother's Monthly Income">
+                  </div>
+                </div>
+              </div>
+              <!-- item-9 end  -->
+
+              <!-- item-10 start  -->
+              <div class="col-md-6 col-12 mt-4">
+                <div class="row">
+                  <div class="col-md-6 col-12 d-flex align-items-center font-size">
+                    <label for="lname">Mobile No : </label>
+                  </div>
+                  <div class="col-md-6 col-12 box-size">
+                    <input type="text" id="lname" name="lastname" placeholder="Mother's Number">
+                  </div>
+                </div>
+              </div>
+              <!-- item-10 end  -->
+
+              <!-- item-7 start  -->
+
+              <div class="col-md-6 col-12 mt-4">
+                <div class="row">
+                  <div class="col-md-6 col-12 d-flex align-items-center font-size">
+                    <label for="lname">Father's NID: *</label>
+                  </div>
+                  <div class="col-md-6 col-12 box-size">
+                    <input type="text" id="lname" name="lastname" placeholder="Mother's NID Number">
+                  </div>
+                </div>
+              </div>
+              <!-- item-7 end  -->
 
             </div>
               <!-- *****Section-four end **** -->
