--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
   </div>
 
 
-   <!-- ****Swiper Slider recent work photo Start***-->
+   <!-- ****Swiper Slider and notice Start***-->
 
    <div class="container-fluid recent-work-bg px-0" id="portfolio">
     <div class="recent-work-color-bg">
@@ -314,7 +314,7 @@
         <div class="row pb-5 ">
 
         
-          <div class="col-md-6 col-12">
+          <div class="col-md-8 col-12">
 
 
             <div class="swiper mySwiper">
@@ -414,7 +414,7 @@
     </div>
   </div>
 
-  <!-- ****Swiper Slider recent work End***-->
+  <!-- ****Swiper Slider and notice End***-->
   <!-- **************Footer Start*********  -->
 
   <div class="container-fluid bg-secondary py-5">
