woow js use on logo

--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
     integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <!-- Swiper slider link  -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+  <!-- Woow js link  -->
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
 
   <!-- External CSS Link  -->
   
@@ -68,7 +71,7 @@
         <div class="col-12">
 
           <div class="logo-search d-flex justify-content-between py-2">
-            <div class="logo">
+            <div class="logo animate__animated animate__pulse animate__infinite">
               <a href="#"><img src="images/university-logo.png" alt="Main-logo" height="auto" width="100"
                   class="img-fluid"></a>
             </div>
@@ -342,7 +345,7 @@
               <div class="col-12">
               <ul class="nav nav-tabs d-flex justify-content-between">
                 <li class="nav-item bg-primary" >
-                  <a class="nav-link px-4" aria-current="page" href="#"><i class="fa-solid fa-volume-high me-2"></i>Notice</a>
+                  <a class="nav-link px-4" aria-current="page" href="#"><i class="fa-solid fa-volume-high me-2 animate__animated animate__pulse animate__infinite"></i>Notice</a>
                 </li>
                 <li class="nav-item bg-secondary">
                   <a class="nav-link px-4" href="#"><i class="fa-solid fa-book me-2"></i>Exam</a>
@@ -470,13 +473,7 @@
       </div>
     </div>
   
-    TUITION &
-    FEES
-    HOSTEL
-    FACILITY
-    ADMISSION
-    DETAILS
-    
+   
   <!-- ****Carousel Slider and notice End***-->
 
 
@@ -559,6 +556,13 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
+
+    <!-- Woow Js  -->
+
+    <script src="js/wow.min.js"></script>
+              <script>
+              new WOW().init();
+              </script>
   
 </body>
 
